# devnull

./: README.md  pyproject.toml
devnull/: __main__.py
