[project]
name = "devnull"
version = "0.1.0"
description = ""
authors = [
    {name = "Nova",email = "mooncell07@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = ["hikari (>=2.3.3,<3.0.0)", "keystone-engine (>=0.9.2,<0.10.0)", "capstone (>=5.0.6,<6.0.0)", "hikari-lightbulb (>=3.0.0,<4.0.0)", "black (>=25.1.0,<26.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
